# polarprism

./: .gitignore  README.md  config.py  heading_monitor.py  log_analysis.py  logging_config.py  main.py  manual.md  nav.py  polarprism.toml.example  pyproject.toml  tabs.py  theme.py
.github/workflows/: ci.yml
boatpolars/: coverage.py  parser.py
chart/: renderer.py  tiles.py
pages/: diagnostics.py  heading.py  log.py  navigation.py  polar.py  polar_builder.py  replay.py  rose.py  route.py  sailing.py  settings.py  trend.py  ui.py  wind.py
polars/: README.md  US50_Rated_Asym.csv  US50_Rated_BestPerf.csv  US50_Rated_BestPerf.sailselect  US50_Rated_Code0.csv  coverage.py  example_J105_BestPerf.saildef  example_J105_BestPerf.sailselect  example_J105_Jib.csv  parser.py
replay/: __init__.py  controls.py  engine.py
routes/: README.md  example_lake_erie_route.gpx  parser.py
signalk/: client.py  filters.py  models.py  rawlog.py
tests/: test_chart.py  test_config.py  test_coverage.py  test_filters.py  test_logging_config.py  test_models.py  test_nav.py  test_polar_recommendation.py  test_polar_wind.py  test_polars.py  test_rawlog.py  test_replay.py  test_replay_page.py  test_routes.py  test_tiles.py  test_trend.py  test_ui.py
