[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "polarprism"
version = "0.1.0"
description = "Real-time sailing navigation instrument"
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.5",
    "aiofiles>=23.0",
    "websockets>=12.0",
    "nmea2000>=2026.5.2",
]

[project.optional-dependencies]
# Enables in-app editing of polarprism.toml (writing TOML). Without it,
# save_config falls back to writing a JSON file.
config = ["tomli_w>=1.0"]
# Enables the measured-polar comparison plot in log_analysis.py polar.
plot = ["matplotlib>=3.5"]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
polarprism = "main:cli"

# Flat layout: the app is a set of top-level modules plus a few packages.
# Declared explicitly so setuptools' auto-discovery doesn't bail on the
# multiple top-level dirs (and so the `polars/` data folder is not packaged).
[tool.setuptools]
py-modules = ["config", "log_analysis", "logging_config", "main", "nav", "tabs", "theme"]
packages = ["boatpolars", "chart", "pages", "replay", "routes", "signalk"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "UP017"]

[tool.mypy]
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true